--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
+    "@types/react-native": "~0.69.1"
   },
   "private": true
 }
